[ bug-fixing ] text-color and overflow-x

--- a/index.css
+++ b/index.css
@@ -63,8 +63,8 @@
 
     .navigation__menu-list {margin-left: auto;margin-right: auto;}
         .navigation__menu-list ul {display: inline-flex; align-items: center;gap: 42px}
-        .navigation__menu-list ul a {padding: 6px 3px; display: inline-flex; align-items: center;}
-        .navigation__menu-list ul a:before {content: ''; display: block; width: 6px;height: 6px; border-radius: 50%; background: transparent;margin-right: 8px;color: var(--color-4); transition: .3s;}
+        .navigation__menu-list ul a {padding: 6px 3px; display: inline-flex; align-items: center;color: var(--color-4)}
+        .navigation__menu-list ul a:before {content: ''; display: block; width: 6px;height: 6px; border-radius: 50%; background: transparent;margin-right: 8px;; transition: .3s;}
         .navigation__menu-list ul a:hover {color: var(--color-3);}
         .navigation__menu-list ul li:hover a::before {background: var(--color-3);}
 
@@ -160,13 +160,13 @@
                     .download__store:hover {opacity: 1;}
         /*  main/blog_container */
         .blog {overflow: inherit;}
-        .blog__wrapper {display: grid;grid-template-columns: .4fr .6fr; grid-gap: 130px; align-items: center;}
+        .blog__wrapper {display: grid;grid-template-columns: 450px calc(100% - 580px); grid-gap: 130px; align-items: center; }
             /* blog/text */
             .blog__text {display: grid;grid-gap: 28px;}
                 .blog__cta {display: inline-block; color: #10375C;}
                 .blog__cta:hover {text-decoration: underline;}
             /* blog/list */
-            .blog-list {display: grid;grid-template-columns: repeat(auto-fill, 270px); grid-auto-rows: 375px;grid-auto-columns: 270px;grid-gap: 30px; overflow: hidden; grid-auto-flow: column;}
+            .blog-list {display: grid;grid-template-columns: repeat(auto-fill, 270px); grid-auto-rows: 375px;grid-auto-columns: 270px;grid-gap: 30px;  grid-auto-flow: column; overflow-x: clip; width: 100%;}
                 .blog-list__blog-item {border-radius: 12px; border: 1px solid #E8EBEE; box-sizing: border-box; overflow: hidden; transition: 0.3s;}
                 .blog-list__blog-item:hover {border-color: transparent;box-shadow: 0px 18px 50px 0px rgba(0, 0, 0, 0.05);}
                     .blog-item__img {height: 172px; object-fit: cover;}
@@ -180,6 +180,8 @@
             .appoint__title {margin-bottom: 18px; text-align: center;}
             .appoint__hr {margin-bottom: 18px;width: 136px;height: 2px;background: var(--color-1); }
             .appoint__desc {margin-bottom: 38px; max-width: 617px; text-align: center;}
+                .appoint__desc a {font-size: 1.8rem;}
+                .appoint__desc a:hover {color: var(--color-1);}
             .appoint__cta {padding: 15px 40px;}
     /* Footer */
     .footer {background: var(--color-5);padding-top: 100px;padding-bottom: 42px;}
@@ -203,7 +205,7 @@
             .col__row {display: block;}
                 .col__title {color: var(--color-3); font-weight: 600; margin-bottom: 20px; display: inline-block; font-family: var(--font-2);}
                 .col__row ul {text-indent: 0; padding: 0; margin: 0; display: grid;grid-gap: 10px;}
-                .col__row li a {line-height: 1.85; font-family: var(--font-2);}
+                .col__row li a {line-height: 1.85; font-family: var(--font-2); color: var(--color-6); }
                 .col__row li a::before {content: attr(title); display: block;height: 0;visibility: hidden;font-weight: 600;}
                 .col__row li:hover a {font-weight: 600;color: var(--color-3);}
             .sns {display: flex;gap: 10px;}
@@ -211,11 +213,11 @@
                 .sns__item i {color: #2E80CE;}
                 .sns__item:hover {background: var(--color-1);}
                 .sns__item:hover i {color: var(--color-3)}
-            .subscribe__desc {font-size: 1.4rem; font-family: var(--font-2); margin-bottom: 10px; line-height: 1.8;}
+            .subscribe__desc {font-size: 1.4rem; font-family: var(--font-2); margin-bottom: 10px; line-height: 1.8; color: var(--color-6); }
             .subscribe__input {display: flex;gap: 12px; align-items: stretch;}
-                .subscribe__email {border: 1px solid #406181; width: 212px;padding: 10px;box-sizing: border-box; border-radius: 4px;outline: none; background: transparent; font-family: var(--font-2); font-size: 1.4rem; }
+                .subscribe__email {border: 1px solid #406181; width: 212px;padding: 10px;box-sizing: border-box; border-radius: 4px;outline: none; background: transparent; font-family: var(--font-2); font-size: 1.4rem; color: var(--color-6); }
                 .subscribe__button {padding: 10px 20px; border: 0; font-family: var(--font-2); font-size: 1.4rem; border-radius: 4px; outline: none;}
         .footer__hr {width: 100%;height: 1px;background: #406181; margin: 28px 0;}
-        .copyright {font-size: 1.4rem; font-family: var(--font-2);display: block;text-align: center;}
+        .copyright {font-size: 1.4rem; font-family: var(--font-2);display: block;text-align: center; color: #AAB3BA;}
 
         
